--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,7 @@ a {
 
 main {
   padding: 10px;
-  max-width: 700px;
+  max-width: 960px;
   margin: 0 auto;
 }
 
@@ -42,9 +42,15 @@ header nav {
 
 .post {
   display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .post {
+    grid-template-columns: 0.9fr 1.1fr;
+  }
 }
 
 .post .texts h2 {
@@ -99,4 +105,34 @@ button {
   border-radius: 5px;
   padding: 7px 0;
   cursor: pointer;
+}
+
+.post-page .image {
+  max-height: 200px;
+  display: flex;
+  overflow: hidden;
+}
+
+.post-page img {
+  object-fit: cover;
+  object-position: center center;
+}
+
+.post-page h1 {
+  text-align: center;
+  margin: 10px 0 5px;
+}
+
+.post-page time {
+  text-align: center;
+  display: block;
+  font-size: 0.7rem;
+  color: #aaa;
+}
+
+.post-page .author {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 0.7rem;
+  font-weight: bold;
 }
